[project]
name = "kernel-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.15.12",
    "tokenizers>=0.23.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
]
